Create expanded form for user registartion

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Sign In</a></li>
-                                <li><a class="dropdown-item" href="#">Sign Up</a></li>
+                                <li><a class="dropdown-item" href="{% url 'sign-up' %}">Sign Up</a></li>
                             </ul>
                         </li>
                     </ul>
