Add login view, basic page, url, add navbar link

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                                 Members
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Sign In</a></li>
+                                <li><a class="dropdown-item" href="{% url 'sign-in' %}">Sign In</a></li>
                                 <li><a class="dropdown-item" href="{% url 'sign-up' %}">Sign Up</a></li>
                             </ul>
                         </li>
