--- a/member/templates/member/sign_in.html
+++ b/member/templates/member/sign_in.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-{% block title %}Sign Up To StripTeaser Blog{% endblock title %}
+{% block title %}Sign In To StripTeaser Blog{% endblock title %}
 {% block content %}
 <main>
-    <h1>Sign Up</h1>
+    <h1>Sign In</h1>
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p}}
-        <input type="submit" value="Sign Up">
+        <input type="submit" value="Sign In">
     </form>
 </main>
 {% endblock content %}
