--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,8 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'sign-in' %}">Sign In</a></li>
                                 <li><a class="dropdown-item" href="{% url 'sign-up' %}">Sign Up</a></li>
+                                <li><a class="dropdown-item" href="" data-bs-toggle="modal"
+                                        data-bs-target="#signOutModal">Sign Out</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -49,6 +51,7 @@
     </header>
     {% block content %}
     {% endblock content %}
+    {% include 'member/sign_out_confirm.html' %}
     <footer>
         social links
     </footer>
