--- a/templates/base.html
+++ b/templates/base.html
@@ -34,10 +34,13 @@
                                 Members
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'sign-in' %}">Sign In</a></li>
-                                <li><a class="dropdown-item" href="{% url 'sign-up' %}">Sign Up</a></li>
+                                {% if request.user.is_authenticated %}
                                 <li><a class="dropdown-item" href="" data-bs-toggle="modal"
                                         data-bs-target="#signOutModal">Sign Out</a></li>
+                                {% else %}
+                                <li><a class="dropdown-item" href="{% url 'sign-in' %}">Sign In</a></li>
+                                <li><a class="dropdown-item" href="{% url 'sign-up' %}">Sign Up</a></li>
+                                {% endif %}
                             </ul>
                         </li>
                     </ul>
