--- a/templates/header.html
+++ b/templates/header.html
@@ -22,6 +22,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             {% if request.user.is_authenticated %}
+                            <li><a class="dropdown-item" href="{% url 'profile' user.id %}">Profile</a></li>
                             <li><a class="dropdown-item" href="" data-bs-toggle="modal"
                                     data-bs-target="#signOutModal">Sign Out</a></li>
                             {% else %}
