--- a/member/templates/member/profile.html
+++ b/member/templates/member/profile.html
@@ -6,7 +6,7 @@
     <p>{{ profile.email }}</p>
     <p>{{ profile.first_name }}</p>
     <p>{{ profile.last_name }}</p>
-    <p>{{ profile.about}}</p>
-    <p>{{ profile.location}}</p>
+    <p>{{ profile.member.about}}</p>
+    <p>{{ profile.member.location}}</p>
 </main>
 {% endblock content %}
