--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,31 @@
 
 <body>
     {% include 'header.html' %}
+
+    <!-- Django messages with bootstrap style -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div id="msg" class="alert {{ message.tags }} alert-dismissible fade show text-center" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close">
+                    </button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
     {% block content %}
     {% endblock content %}
+
     {% include 'member/sign_out_confirm.html' %}
+
     <footer>
         social links
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
