--- a/member/templates/member/profile.html
+++ b/member/templates/member/profile.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block title %}Member Profile{% endblock title %}
+{% extends 'base.html' %} {% block title %}Member Profile{% endblock title %}
 {% block content %}
 <main>
     <h2>{{ profile.username }}</h2>
@@ -7,6 +6,7 @@
     <p>{{ profile.first_name }}</p>
     <p>{{ profile.last_name }}</p>
     <p>{{ profile.member.about}}</p>
+    <img src="{{ profile.member.avatar.url }}" alt="" width="100" height="100" class="rounded-circle">
     <p>{{ profile.member.location}}</p>
     {% if request.user.is_authenticated and request.user.id == profile.id %}
     <a href="{% url 'profile-update' profile.id %}">Update</a>
