--- a/member/templates/member/profile_update.html
+++ b/member/templates/member/profile_update.html
@@ -2,7 +2,7 @@
 {% block title %}Member Profile{% endblock title %}
 {% block content %}
 <main>
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ user_form.as_p }}
         {{ profile_form.as_p }}
