Update Member ProfileForm, model, profile html

--- a/member/templates/member/profile.html
+++ b/member/templates/member/profile.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block title %}Member Profile{% endblock title %}
+{% extends 'base.html' %}
+{% load cloudinary %}
+{% block title %}Member Profile{% endblock title %}
 {% block content %}
 <main>
     <h2>{{ profile.username }}</h2>
@@ -6,7 +8,9 @@
     <p>{{ profile.first_name }}</p>
     <p>{{ profile.last_name }}</p>
     <p>{{ profile.member.about}}</p>
-    <img src="{{ profile.member.avatar.url }}" alt="" width="100" height="100" class="rounded-circle">
+    {% if profile.member.avatar.url %}
+    <img src="{{ profile.member.avatar.url }}" alt="avatar" width="150" height="150">
+    {% endif %}
     <p>{{ profile.member.location}}</p>
     {% if request.user.is_authenticated and request.user.id == profile.id %}
     <a href="{% url 'profile-update' profile.id %}">Update</a>
