Install crispy forms, add filters member app forms

--- a/member/templates/member/profile.html
+++ b/member/templates/member/profile.html
@@ -14,6 +14,7 @@
     <p>{{ profile.member.location}}</p>
     {% if request.user.is_authenticated and request.user.id == profile.id %}
     <a href="{% url 'profile-update' profile.id %}">Update</a>
+    <a href="{% url 'profile-delete' profile.id %}">Delete</a>
     {% endif %}
 </main>
 {% endblock content %}
