--- a/member/templates/member/sign_in.html
+++ b/member/templates/member/sign_in.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}Sign In To StripTeaser Blog{% endblock title %}
 {% block content %}
 <main>
     <h1>Sign In</h1>
     <form action="" method="POST">
         {% csrf_token %}
-        {{ form.as_p}}
+        {{ form | crispy }}
         <input type="submit" value="Sign In">
     </form>
 </main>
