--- a/member/templates/member/profile_update.html
+++ b/member/templates/member/profile_update.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}Member Profile{% endblock title %}
 {% block content %}
 <main>
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ user_form.as_p }}
-        {{ profile_form.as_p }}
+        {{ user_form | crispy }}
+        {{ profile_form | crispy }}
         <input type="submit" value="Update">
     </form>
 </main>
