--- a/member/templates/member/sign_up.html
+++ b/member/templates/member/sign_up.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}Sign Up To StripTeaser Blog{% endblock title %}
 {% block content %}
 <main>
     <h1>Sign Up</h1>
     <form action="" method="POST">
         {% csrf_token %}
-        {{ form.as_p}}
+        {{ form | crispy}}
         <input type="submit" value="Sign Up">
     </form>
 </main>
