Connect css, add basic style for header

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,15 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">StripTeaser</a>
+            <a class="navbar-brand" href="#"><svg class="css-ze2te4 css-qd6ojx"
+                    viewBox="0 0 88.98305084745763 84.09388559703329" width=40 height=40>
+                    <g transform="translate(-1.8910208383443239, -4.335746534508351) scale(0.9663173359826587)"
+                        class="css-1lmlii8" fill="#f5af02">
+                        <path xmlns="http://www.w3.org/2000/svg"
+                            d="M28.036,91.512c-0.38,0-0.764-0.104-1.096-0.324c-0.708-0.467-1.048-1.332-0.844-2.155l3.552-14.353H15.872  c-0.944,0-1.764-0.656-1.956-1.584L2,16.368c-0.116-0.556,0.004-1.132,0.34-1.588c0.332-0.456,0.84-0.752,1.404-0.813L91.828,4.5  c0.607-0.072,1.22,0.156,1.648,0.592c0.428,0.436,0.631,1.056,0.547,1.66l-7.836,58.191c-0.136,0.992-0.979,1.736-1.983,1.736  H61.216L29.256,91.1C28.892,91.376,28.464,91.512,28.036,91.512L28.036,91.512z">
+                        </path>
+                    </g>
+                </svg> StripTeaser</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -16,8 +24,8 @@
                         <a class="nav-link" href="#">Comics/Strips</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
+                        <a class="nav-link dropdown-toggle member-yellow rounded" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Members
                         </a>
                         <ul class="dropdown-menu">
@@ -34,7 +42,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn member-yellow" type="submit">Search</button>
                 </form>
             </div>
         </div>
