Style profile page, html conditional rendering

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,17 @@
+/* General Style */
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+
+/* Header Style */
+/* Custom Navbar Style */
 .member-yellow {
     background-color: #f5af02;
 }
@@ -5,4 +19,49 @@
 .member-yellow:hover {
     background-color: #fff;
     border: 1px solid #f5af02;
+}
+
+
+/* Custom Button Style */
+.btn-red {
+    background-color: #e53238;
+    color: #fff;
+}
+
+.btn-red:hover {
+    background-color: #fff;
+    border: 1px solid #e53238;
+    color: #e53238;
+}
+
+.btn-blue {
+    background-color: #0064d2;
+    color: #fff;
+}
+
+.btn-blue:hover {
+    background-color: #fff;
+    border: 1px solid #0064d2;
+    color: #0064d2;
+}
+
+.btn-yellow {
+    background-color: #f5af02;
+    color: #fff;
+}
+
+.btn-yellow:hover {
+    background-color: #fff;
+    border: 1px solid #f5af02;
+    color: #f5af02;
+}
+
+.btn-green {
+    background-color: #86b817;
+}
+
+.btn-green:hover {
+    background-color: #fff;
+    border: 1px solid #86b817;
+    color: #86b817;
 }
