Move main element to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,10 @@
             </div>
         </div>
     </div>
-
-    {% block content %}
-    {% endblock content %}
-
+    <main class="my-5">
+        {% block content %}
+        {% endblock content %}
+    </main>
     {% include 'member/sign_out_confirm.html' %}
 
     <footer>
