--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,140 @@ main {
 }
 
 
+/* Background Animation Style */
+/* Wrapper For Animation */
+.wrapper-animation {
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    overflow: hidden;
+    z-index: -1;
+}
+
+/* Square Animation Object Style */
+.animation-square {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border: 6px solid;
+}
+
+/* Animation Object Position */
+.box-animation div:nth-child(1) {
+    top: 5%;
+    left: 45%;
+    animation: animate 10s linear infinite;
+}
+
+.box-animation div:nth-child(2) {
+    top: 70%;
+    left: 50%;
+    animation: animate 9s linear infinite;
+}
+
+.box-animation div:nth-child(3) {
+    top: 17%;
+    left: 6%;
+    animation: animate 7s linear infinite;
+}
+
+.box-animation div:nth-child(4) {
+    top: 20%;
+    left: 60%;
+    animation: animate 10s linear infinite;
+}
+
+.box-animation div:nth-child(5) {
+    top: 67%;
+    left: 10%;
+    animation: animate 6s linear infinite;
+}
+
+.box-animation div:nth-child(6) {
+    top: 80%;
+    left: 70%;
+    animation: animate 12s linear infinite;
+}
+
+.box-animation div:nth-child(7) {
+    top: 50%;
+    left: 70%;
+    animation: animate 15s linear infinite;
+}
+
+.box-animation div:nth-child(8) {
+    top: 32%;
+    left: 25%;
+    animation: animate 16s linear infinite;
+}
+
+.box-animation div:nth-child(9) {
+    top: 90%;
+    left: 25%;
+    animation: animate 9s linear infinite;
+}
+
+.box-animation div:nth-child(10) {
+    top: 20%;
+    left: 80%;
+    animation: animate 5s linear infinite;
+}
+
+.box-animation div:nth-child(11) {
+    top: 10%;
+    left: 90%;
+    animation: animate 7s linear infinite;
+}
+
+.box-animation div:nth-child(12) {
+    top: 70%;
+    left: 85%;
+    animation: animate 12s linear infinite;
+}
+
+.box-animation div:nth-child(13) {
+    top: 55%;
+    left: 30%;
+    animation: animate 5s linear infinite;
+}
+
+/* Animation */
+@keyframes animate {
+    0% {
+        transform: scale(0) translateY(0) rotate(0);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1.3) translateY(-90px) rotate(360deg);
+        opacity: 0;
+    }
+}
+
+
+/* Card And Animation Square Style */
+.red {
+    border: 2px solid #e53238;
+    box-shadow: 0px 4px 15px -3px #e53238;
+}
+
+.blue {
+    border: 2px solid #0064d2;
+    box-shadow: 0px 4px 15px -3px #0064d2;
+}
+
+.yellow {
+    border: 2px solid #f5af02;
+    box-shadow: 0px 4px 15px -3px #f5af02;
+}
+
+.green {
+    border: 2px solid #86b817;
+    box-shadow: 0px 4px 15px -3px #86b817;
+}
+
+
 /* Custom Button Style */
 .btn-red {
     background-color: #e53238;
