--- a/member/templates/member/sign_up.html
+++ b/member/templates/member/sign_up.html
@@ -2,12 +2,22 @@
 {% load crispy_forms_tags %}
 {% block title %}Sign Up To StripTeaser Blog{% endblock title %}
 {% block content %}
-<main>
-    <h1>Sign Up</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form | crispy}}
-        <input type="submit" value="Sign Up">
-    </form>
-</main>
+<!-- User Registration Section -->
+<div class="container">
+    <section class="row justify-content-center">
+        <div class="col-md-7">
+            <h1 class="mb-3">Sign Up</h1>
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{ form | crispy}}
+                <input type="submit" value="Sign Up" class="btn btn-green">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary">
+            </form>
+            <p class="mt-4 text-muted">
+                Already our member?
+                <a href="{% url 'sign-in' %}" aria-label="Link to sign in">Sign In</a>
+            </p>
+        </div>
+    </section>
+</div>
 {% endblock content %}
