Add style signout confirm, refine animation html

--- a/member/templates/member/sign_out_confirm.html
+++ b/member/templates/member/sign_out_confirm.html
@@ -7,13 +7,12 @@
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Sign Out Confirmation</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-
-                <p>{{ request.user.first_name }}, are you sure you want to sign out?</p>
+            <div class="modal-body text-center">
+                <p class="my-auto">{{ request.user.first_name }}, are you sure you want to sign out?</p>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <a href="{% url 'sign-out' %}" class="btn btn-primary">Sign Out</a>
+            <div class=" modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                <a href="{% url 'sign-out' %}" class="btn btn-green" aria-label="Sign Out from page">Sign Out</a>
             </div>
         </div>
     </div>
