--- a/member/templates/member/sign_in.html
+++ b/member/templates/member/sign_in.html
@@ -2,12 +2,22 @@
 {% load crispy_forms_tags %}
 {% block title %}Sign In To StripTeaser Blog{% endblock title %}
 {% block content %}
-<main>
-    <h1>Sign In</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <input type="submit" value="Sign In">
-    </form>
-</main>
+<!-- User Sign In Form-->
+<div class="container">
+    <section class="row justify-content-center">
+        <div class="col-md-7">
+            <h1 class="mb-4">Sign In</h1>
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{ form | crispy}}
+                <input type="submit" value="Sign In" class="btn btn-green">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary">
+            </form>
+            <p class="mt-4 text-muted">
+                Not a member yet?
+                <a href="{% url 'sign-up' %}" aria-label="Link to sign up page">Sign Up</a>
+            </p>
+        </div>
+    </section>
+</div>
 {% endblock content %}
