Add link in navbar to StripDetailListView

--- a/templates/header.html
+++ b/templates/header.html
@@ -21,7 +21,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Comics/Strips</a>
+                        <a class="nav-link" href="{% url 'strip-list' %}">Strips / Comics</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle member-yellow rounded" href="#" role="button"
