--- a/stripdetail/templates/stripdetail/strips.html
+++ b/stripdetail/templates/stripdetail/strips.html
@@ -2,8 +2,13 @@
 {% block title %}List of Strips{% endblock title %}
 {%block content %}
 <div class="container-md">
-    <div class="row text-center">
+    <div class="row text-center mb-4">
         <h1>List of Strips</h1>
+    </div>
+    <div class="row justify-content-center my-4">
+        <div class="col-md-2">
+            <a href="{% url 'strip-create' %}" class="btn btn-grey">Add New Strip</a>
+        </div>
     </div>
     <div class="row gap-5 justify-content-center my-auto">
         <div class="row justify-content-evenly gap-5">
