Add authetnication, authorization control

--- a/stripdetail/templates/stripdetail/strips.html
+++ b/stripdetail/templates/stripdetail/strips.html
@@ -5,11 +5,13 @@
     <div class="row text-center mb-4">
         <h1>List of Strips</h1>
     </div>
+    {% if request.user.is_authenticated %}
     <div class="row justify-content-center my-4">
-        <div class="col-md-2">
+        <div class="col-4 text-center">
             <a href="{% url 'strip-create' %}" class="btn btn-grey">Add New Strip</a>
         </div>
     </div>
+    {% endif %}
     <div class="row gap-5 justify-content-center my-auto">
         <div class="row justify-content-evenly gap-5">
             {% for strip in page_obj %}
@@ -53,10 +55,13 @@
                             <strong> {{ strip.binding }} </strong>
                         </li>
                     </ul>
-                    <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
+                    <!-- Check for authentication and if user is usert that add the strip -->
+                    {% if request.user.is_authenticated and request.user.id == strip.user.id %}
+                    <div class="card-body text-center">
+                        <a href="{% url 'strip-update' strip.slug %}" class="btn btn-yellow">Update</a>
                         <a href="#" class="card-link">Another link</a>
                     </div>
+                    {% endif %}
                 </div>
             </div>
             {% endfor %}
