--- a/templates/delete_confirm.html
+++ b/templates/delete_confirm.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-{% block title %}Delete {{ object.title }}{% endblock title %}
+{% block title %}Delete {{ object }}?{% endblock title %}
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-4 text-center">
             <form action="" method="POST">
                 {% csrf_token %}
-                <p>Are you sure you want to delete {{ object.title }}?</p>
+                <p>Are you sure you want to delete "{{ object }}"?</p>
                 <input type="submit" value="Delete" class="btn btn-red">
                 <a href="{% url 'home-page' %}" class="btn btn-outline-secondary">Cancel</a>
             </form>
