--- a/blogpost/templates/blogpost/post_create.html
+++ b/blogpost/templates/blogpost/post_create.html
@@ -7,6 +7,8 @@
     <section class="row justify-content-center">
         <div class="col-md-7">
             <h1 class="mb-4">Write Review</h1>
+            <p>There is no edition of the comic you want to write about?</p>
+            <a href="{% url 'strip-create' %}" class="btn btn-grey mb-4">You can add here!</a>
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
