--- a/blogpost/templates/blogpost/post.html
+++ b/blogpost/templates/blogpost/post.html
@@ -14,7 +14,7 @@
                             @{{ post.author }}
                         </a>
                     </p>
-                    <p class="card-text">{{ post.content|safe }}</p>
+                    {{ post.content|safe }}
                 </div>
                 <!-- Check for authentication and if user is usert that add the strip -->
                 {% if request.user.is_authenticated and request.user.id == post.author.id %}
