--- a/blogpost/templates/blogpost/post_create.html
+++ b/blogpost/templates/blogpost/post_create.html
@@ -11,6 +11,7 @@
             <a href="{% url 'strip-create' %}" class="btn btn-grey mb-4">You can add here!</a>
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
+                {{ form.media }}
                 {{ form|crispy }}
                 <input type="submit" value="Create" class="btn btn-green">
                 <input type="reset" value="Clear" class="btn btn-outline-secondary">
