Add SearchListView, url, edit html form

--- a/templates/header.html
+++ b/templates/header.html
@@ -40,8 +40,8 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" role="search" method="GET" action="{% url 'search' %}">
+                    <input class="form-control me-2" name="search" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn member-yellow" type="submit">Search</button>
                 </form>
             </div>
