--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,7 @@
     </main>
     {% include 'member/sign_out_confirm.html' %}
 
-    <footer>
-        social links
-    </footer>
+    {% include 'footer.html' %}
 
     <script src="{% static 'js/script.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
