Add {% load static %} tag

--- a/member/templates/member/profile_update.html
+++ b/member/templates/member/profile_update.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}Update Profile Page{% endblock title %}
 {% block content %}
