--- a/member/templates/member/sign_out.html
+++ b/member/templates/member/sign_out.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Sign Out From StripTeaser Blog{% endblock title %}
 {% block content %}
 <main>
