--- a/blogpost/templates/blogpost/blog.html
+++ b/blogpost/templates/blogpost/blog.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}List of Strips{% endblock title %}
 {%block content %}
 <div class="container">
