--- a/member/templates/member/profile.html
+++ b/member/templates/member/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}{{ profile.username }} Profile Page{% endblock title %}
 {% block content %}
 <div class="container">
