--- a/member/templates/member/sign_in.html
+++ b/member/templates/member/sign_in.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}Sign In To StripTeaser Blog{% endblock title %}
 {% block content %}
