--- a/stripdetail/templates/stripdetail/strip_update.html
+++ b/stripdetail/templates/stripdetail/strip_update.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}Strip Update Page{% endblock title %}
 {% block content %}
