--- a/templates/delete_confirm.html
+++ b/templates/delete_confirm.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Delete {{ object }}?{% endblock title %}
 {% block content %}
 <div class="container">
