--- a/blogpost/templates/blogpost/blog.html
+++ b/blogpost/templates/blogpost/blog.html
@@ -6,11 +6,13 @@
     <div class="row text-center mb-4">
         <h1>Reviews</h1>
     </div>
+    {% if request.user.is_authenticated %}
     <div class="row justify-content-center my-4">
         <div class="col-4 text-center">
             <a href="{% url 'create-post' %}" class="btn btn-grey">Add New Review</a>
         </div>
     </div>
+    {% endif %}
     <div class="row gap-5 justify-content-center my-auto">
         <!-- Conditional Rendering -->
         {% if page_obj %}
