--- a/blogpost/templates/blogpost/post_create.html
+++ b/blogpost/templates/blogpost/post_create.html
@@ -1,21 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}Write Review Page{% endblock title %}
+{% block title %}Write New Review{% endblock title %}
 {% block content %}
 <!-- Strip Post Creation Page -->
 <div class="container">
     <section class="row justify-content-center">
-        <div class="col-md-7">
+        <div class="col-md-7 btn-grey rounded p-4">
             <h1 class="mb-4">Write Review</h1>
             <p>There is no edition of the comic you want to write about?</p>
             <a href="{% url 'strip-create' %}" class="btn btn-grey mb-4">You can add here!</a>
+            <!-- Form For Creating Posts -->
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.media }}
                 {{ form|crispy }}
-                <input type="submit" value="Create" class="btn btn-green">
-                <input type="reset" value="Clear" class="btn btn-outline-secondary">
+                <input type="submit" value="Create" class="btn btn-green mt-3">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3">
             </form>
         </div>
     </section>
