--- a/blogpost/templates/blogpost/post_update.html
+++ b/blogpost/templates/blogpost/post_update.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}Update Review Page{% endblock title %}
+{% block title %}Update Review{% endblock title %}
 {% block content %}
 <!-- Strip Post Update Page -->
 <div class="container">
     <section class="row justify-content-center">
-        <div class="col-md-7">
+        <div class="col-md-7 btn-grey rounded p-4">
             <h1 class="mb-4">Update Review</h1>
+            <!-- Form For Updating Posts -->
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.media }}
                 {{ form|crispy }}
-                <input type="submit" value="Update" class="btn btn-green">
-                <input type="reset" value="Clear" class="btn btn-outline-secondary">
+                <input type="submit" value="Update" class="btn btn-green mt-3">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3">
             </form>
         </div>
     </section>
